// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeEven fails when given an even number 1`] = `
"expect(received).not.toBeEven()

Expected value to not be an even number received:
 2"
`;

exports[`.toBeEven fails when not given an even number 1`] = `
"expect(received).toBeEven()

Expected value to be an even number received:
 false"
`;

exports[`.toBeEven fails when not given an even number 2`] = `
"expect(received).toBeEven()

Expected value to be an even number received:
 true"
`;

exports[`.toBeEven fails when not given an even number 3`] = `
"expect(received).toBeEven()

Expected value to be an even number received:
 \\"\\""
`;

exports[`.toBeEven fails when not given an even number 4`] = `
"expect(received).toBeEven()

Expected value to be an even number received:
 1"
`;

exports[`.toBeEven fails when not given an even number 5`] = `
"expect(received).toBeEven()

Expected value to be an even number received:
 {}"
`;

exports[`.toBeEven fails when not given an even number 6`] = `
"expect(received).toBeEven()

Expected value to be an even number received:
 [Function anonymous]"
`;

exports[`.toBeEven fails when not given an even number 7`] = `
"expect(received).toBeEven()

Expected value to be an even number received:
 undefined"
`;

exports[`.toBeEven fails when not given an even number 8`] = `
"expect(received).toBeEven()

Expected value to be an even number received:
 null"
`;

exports[`.toBeEven fails when not given an even number 9`] = `
"expect(received).toBeEven()

Expected value to be an even number received:
 NaN"
`;
